<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/selectColor"
        android:title="@string/selectColor" >
        <!-- "Background color" submenu -->
        <menu>
            <item android:id="@+id/yellow"
                android:title="@string/yellow" />
            <item android:id="@+id/green"
                android:title="@string/green" />
            <item android:id="@+id/red"
                android:title="@string/red" />
        </menu>
    </item>
    <item android:id="@+id/notes"
        android:title="@string/notes" />
    <item android:id="@+id/public_notes"
        android:title="@string/public_notes" />
    <item android:id="@+id/external_public_notes"
        android:title="@string/external_public_notes" />
</menu>